# llm-as-a-judge-lite

./: .gitignore  README.md  pyproject.toml  run_judge.py
config/: bench.yaml
data/: questions.json
prompts/: judge.txt  player.txt
